- added error message if trying to synchronize from a tag and at the same time specifying the from
 version number. The tag implicitly sets a version number from where to start the synchronization.
- IE8 compatibility fix in Main menu
- updating FAQ on how to upgrade deltasql (by using TAGs, one can easily retrieve the missing scripts to be executed)
- updating manual on project and modules

1.3.3 Release Notes 25.2.2011
Deltasql is more wiki-like as anyone can edit a script. The history of editing is recorded as well.
Administrators can retrieve deleted scripts. Improved right management with bugfixes.

People upgrading from 1.3.2 should execute this script into the deltasql schema:
CREATE TABLE `tbscriptchangelog` (
  `id` int(11) NOT NULL auto_increment,
  `code` longtext collate latin1_general_ci NOT NULL,
  `module_id` int(11) NOT NULL,
  `versionnr` int(11) NOT NULL,
  `user_id` int(11) NOT NULL,
  `update_user` VARCHAR( 64 ) NULL,
  `script_id` int(11) NOT NULL,
  `create_dt` datetime NOT NULL,
  `comments` longtext collate latin1_general_ci,
  `title` varchar(64) collate latin1_general_ci default NULL,
  `isapackage` tinyint(1) NOT NULL default '0',
  `isaview` tinyint(1) NOT NULL default '0',
  PRIMARY KEY  (`id`)
) ENGINE=MyISAM DEFAULT CHARSET=latin1 COLLATE=latin1_general_ci AUTO_INCREMENT=1; 


25.2.2011 git
- added logic to save changes into tbscriptchangelog, if a script is edited or removed
- added ability to list history of edited files for anyone
- added ablilty for administrators to see deleted scripts

24.2.2011 git
- bugfix: editing a script hijacked ownership of script to the submitting user
- dropped feature of editing script and increasing version number at the same time as it has some hidden
 consequences which could get dangerous (Hari suggestion as well).
- preparing data structure to record changes to scripts:

CREATE TABLE `tbscriptchangelog` (
  `id` int(11) NOT NULL auto_increment,
  `code` longtext collate latin1_general_ci NOT NULL,